k8s/db-deployment-novolume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.network/djangonetwork: "true"
        io.service: db
    spec:
      containers:
        - args:
            - mysqld
            - --character-set-server=utf8mb4
            - --collation-server=utf8mb4_unicode_ci
          image: mysql:8.0
          name: db
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 15
            periodSeconds: 20
          ports:
            - containerPort: 3306
          resources: {}
      restartPolicy: Always
status: {}
