k8s/db-deployment-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.network/djangonetwork: "true"
        io.service: db
    spec:
      containers:
        - args:
            - mysqld
            - --character-set-server=utf8mb4
            - --collation-server=utf8mb4_unicode_ci
          image: mysql:8.0
          name: db
          livenessProbe:
            exec:
              command:
                - bash
                - "-c"
                - | 
                  mysqladmin -uroot -p$MYSQL_ROOT_PASSWORD ping &> /dev/null
          ports:
            - containerPort: 3306
          resources: {}
      restartPolicy: Always
status: {}
