k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    io.service: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.service: web
  template:
    metadata:
      labels:
        io.network/djangonetwork: "true"
        io.service: web
    spec:
      containers:
      - name: web
        image: imagename
        imagePullPolicy: Never
        ports:
          - containerPort: 80
        resources: {}
