k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.service: db
  name: db
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    io.service: db
  type: NodePort
status:
  loadBalancer: {}
