k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.service: web
  name: web
spec:
  ports:
    - name: "8080"
      port: 8080
      nodePort: 30008
      targetPort: 80
  selector:
    io.service: web
  type: NodePort
status:
  loadBalancer: {}
