k8s/djangonetwork-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: djangonetwork
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.network/djangonetwork: "true"
  podSelector:
    matchLabels:
      io.network/djangonetwork: "true"
